 * New Module: org.simgrid.msg.VM (SimGrid interface to mimick IAAS clouds)
 * Change the meaning of Process.restart: now restart the process from
   the begining, like MSG_process_restart in C.
 * Add Process.setAutoRestart: handling of process restart when failed
   host comes back. 
 * Add Process.getProperty, Host.getProperty, Host.getProperty: allows
   you to retrieve the properties of the processes/hosts 
 
 * New context factory based on Coroutines. It mandates a modified JVM
   but then, the simulations run about five times faster, and there is
   no limit to the amount of processes (beside of the available memory).
 
SimGrid-java (3.7.1) stable; urgency=low
  
 The "Java aint got to be bloated and slow" release
 
 Major cleanups:
 * Various internal cleanups and performance improvement
   Simulations are expected to run up to twice faster or so
 * Make Process.kill(process) an instance method, not a static one
 * User processes are not java.lang.Thread subclasses. 
   This breaks the compatibility (sorry), but previous API was
   brain-dead, making it impossible to have non-trivial
   initializations in the process constructor. 
 * Require a full constructor per Process sub-class.
   Kinda breaks the compatibility (sorry), but this allows a much more
   efficient way to launch the processes at simulation startup.
 * Do not embeed our version of semaphores, java 1.5 can be considered
   as sufficiently prevalent for us to not dupplicate its features.
 * Lot of bug fixes
 
 Extend the API:
 * Add examples for almost every part of the API
   We spotted and fixed a lot of bugs in the process
 
 * New module: asynchronous communication API
 * New function: Process.sleep()
   It takes milliseconds as argument, just as java.lang.Thread.sleep()
 * New module: org.simgrid.msg.Mutex (SimGrid mutexes)
 * New module: org.simgrid.msg.RngStream (RngStreams random generators)

 -- 2012-06-12 Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 